Bug 221551 - ark dies when i extract lots of rar part-archives simultaneously and cancel this action
Summary: ark dies when i extract lots of rar part-archives simultaneously and cancel t...
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: Harald Hvaal
URL:
Keywords:
: 236386 237169 241328 253902 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-01-06 18:12 UTC by Benedikt Haus
Modified: 2010-10-12 22:10 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.4.5
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (3.66 KB, text/plain)
2010-04-03 20:17 UTC, Jørgen Vero
Details
New crash information added by DrKonqi (4.96 KB, text/plain)
2010-05-04 08:15 UTC, thorsten
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Benedikt Haus 2010-01-06 18:12:29 UTC
Application that crashed: ark
Version of the application: 2.13
KDE Version: 4.3.4 (KDE 4.3.4)
Qt Version: 4.5.2
Operating System: Linux 2.6.31-16-generic x86_64
Distribution: Ubuntu 9.10

What I was doing when the application crashed:
s.o.

 -- Backtrace:
Application: Ark (ark), signal: Segmentation fault
[KCrash Handler]
#5  QThread::d_func (this=<value optimized out>, time=<value optimized out>) at thread/qthread.h:130
#6  QThread::wait (this=<value optimized out>, time=<value optimized out>) at thread/qthread_unix.cpp:472
#7  0x00000036a261b45c in Kerfuffle::Job::~Job() () from /usr/lib/libkerfuffle.so.4
#8  0x00000036a261eac0 in ?? () from /usr/lib/libkerfuffle.so.4
#9  0x00000036a3af889e in qDeleteAll<QList<KJob*>::const_iterator> (this=<value optimized out>, __in_chrg=<value optimized out>) at /usr/include/qt4/QtCore/qalgorithms.h:350
#10 qDeleteAll<QList<KJob*> > (this=<value optimized out>, __in_chrg=<value optimized out>) at /usr/include/qt4/QtCore/qalgorithms.h:358
#11 ~KCompositeJobPrivate (this=<value optimized out>, __in_chrg=<value optimized out>) at ../../kdecore/jobs/kcompositejob.cpp:29
#12 0x00000036a3af948a in ~KJob (this=<value optimized out>, __in_chrg=<value optimized out>) at ../../kdecore/jobs/kjob.cpp:69
#13 0x00000036a2628118 in Kerfuffle::BatchExtract::~BatchExtract() () from /usr/lib/libkerfuffle.so.4
#14 0x00000036a215411d in QObject::event (this=<value optimized out>, e=<value optimized out>) at kernel/qobject.cpp:1094
#15 0x00000036a41a0efc in QApplicationPrivate::notify_helper (this=<value optimized out>, receiver=<value optimized out>, e=<value optimized out>) at kernel/qapplication.cpp:4056
#16 0x00000036a41a81ce in QApplication::notify (this=<value optimized out>, receiver=<value optimized out>, e=<value optimized out>) at kernel/qapplication.cpp:4021
#17 0x00000036a5223e56 in KApplication::notify (this=<value optimized out>, receiver=<value optimized out>, event=<value optimized out>) at ../../kdeui/kernel/kapplication.cpp:302
#18 0x00000036a2144c2c in QCoreApplication::notifyInternal (this=<value optimized out>, receiver=<value optimized out>, event=<value optimized out>) at kernel/qcoreapplication.cpp:610
#19 0x00000036a214580a in QCoreApplication::sendEvent (receiver=<value optimized out>, event_type=<value optimized out>, data=<value optimized out>)
    at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:213
#20 QCoreApplicationPrivate::sendPostedEvents (receiver=<value optimized out>, event_type=<value optimized out>, data=<value optimized out>) at kernel/qcoreapplication.cpp:1247
#21 0x00000036a2145afc in QCoreApplication::exec () at kernel/qcoreapplication.cpp:895
#22 0x0000000000409996 in _start ()

Reported using DrKonqi
Comment 1 Dario Andres 2010-01-06 18:50:44 UTC
This looks related to bug 196856.
- Does Ark always crash if you repeat the situation with the same fileset ?
Thanks
Comment 2 Benedikt Haus 2010-01-06 19:02:28 UTC
Hi, I can reproduce this. It happens with all password-protected sets of part1.rar,part2.rar etc I tried. This is what I exactly do: Select all archives from the set, right click, "extract here"(?) (german: "Archiv hierher auspacken"). Then he asks me for the password, I click cancel and ark segfaults.
Comment 3 Jørgen Vero 2010-04-03 20:17:46 UTC
Created attachment 42463 [details]
New crash information added by DrKonqi

I tried to unpack multiple rar-files using the mouse context menu - 'unpack archive...'
Comment 4 thorsten 2010-05-04 08:15:38 UTC
Created attachment 43213 [details]
New crash information added by DrKonqi

upacking lot of rar part archives canceld after first unpacked pice of archive.
Comment 5 Raphael Kubo da Costa 2010-05-10 23:08:44 UTC
*** Bug 237169 has been marked as a duplicate of this bug. ***
Comment 6 Raphael Kubo da Costa 2010-06-20 05:24:45 UTC
*** Bug 236386 has been marked as a duplicate of this bug. ***
Comment 7 Raphael Kubo da Costa 2010-06-20 05:27:09 UTC
*** Bug 241328 has been marked as a duplicate of this bug. ***
Comment 8 Raphael Kubo da Costa 2010-06-20 05:46:18 UTC
SVN commit 1140174 by rkcosta:

Check if we have a thread before executing operations on it.

BUG: 221551

 M  +4 -0      jobs.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1140174
Comment 9 Raphael Kubo da Costa 2010-06-20 06:01:03 UTC
SVN commit 1140181 by rkcosta:

Backport r1140174.

Check if we have a thread before executing operations on it.

CCBUG: 221551

 M  +3 -0      jobs.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1140181
Comment 10 Raphael Kubo da Costa 2010-10-12 22:10:49 UTC
*** Bug 253902 has been marked as a duplicate of this bug. ***