Check if we have a thread before executing operations on it.

BUG: 221551

svn path=/trunk/KDE/kdeutils/ark/; revision=1140174